methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:20: error: value c is not a member of object java.awt.Color
  if(getCouleurSol() == Color.c) {
                              ^